Action Mode Added in Saved File

--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -22,6 +22,5 @@
         android:layout_alignBottom="@id/imageView_images_list"
         android:layout_alignParentEnd="false"
         android:layout_centerVertical="true"
-        android:button="@drawable/custom_check_box"
-        android:visibility="visible" />
+        android:button="@drawable/custom_check_box" />
 </RelativeLayout>
