--- a/app/src/main/res/layout/saved_file_view.xml
+++ b/app/src/main/res/layout/saved_file_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/saved_photo_image_view"
@@ -31,5 +32,17 @@
         android:padding="2dp"
         android:text="12 hours"
         android:textColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/check_box_saved_file"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignStart="@id/saved_photo_image_view"
+        android:layout_alignTop="@id/saved_photo_image_view"
+        android:layout_alignEnd="@id/saved_photo_image_view"
+        android:layout_alignBottom="@id/saved_photo_image_view"
+        android:padding="45dp"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_check" />
 
 </RelativeLayout>
