--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_condensed_regular"
         android:text="@string/delete"
-        android:textColor="?attr/colorOnPrimary"
+        android:textColor="?attr/colorTertiary"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +38,6 @@
         android:fontFamily="@font/roboto_condensed_regular"
         android:text="File Name"
         android:textColor="@color/light_red"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
 </RelativeLayout>
