--- a/app/src/main/res/drawable/date_time_button_background.xml
+++ b/app/src/main/res/drawable/date_time_button_background.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector>
     <item>
-        <shape
-            xmlns:android="http://schemas.android.com/apk/res/android">
-            <stroke
-                android:width="1dp"
-                android:color="#505050"/>
-            <corners
-                android:radius="5dp" />
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <stroke android:width="1dp" android:color="#505050" />
+            <corners android:radius="5dp" />
 
         </shape>
     </item>
