--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -1,8 +1,15 @@
-<vector android:alpha="1" android:height="24dp"
-    android:viewportHeight="512" android:viewportWidth="512"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff"
-        android:pathData="M233,1c-49.4,4.8 -95,23 -135,53.8 -19.5,15 -44.8,43.2 -59.4,66.2 -6.3,9.9 -18.6,35.1 -23,47.1 -4.9,13.4 -10.2,34 -12.8,49.9 -3.1,19.5 -3.1,56.5 0,76 4.5,27.6 11.6,49.8 23.7,74.5 13.2,26.9 26.9,46 48.9,68.1 22.1,22 41.2,35.7 68.1,48.9 24.7,12.1 46.9,19.2 74.5,23.7 19.5,3.1 56.5,3.1 76,-0 27.6,-4.5 49.8,-11.6 74.5,-23.7 26.9,-13.2 46,-26.9 68.1,-48.9 22,-22.1 35.7,-41.2 48.9,-68.1 8.8,-17.9 13.2,-29.6 18,-47.6 6.3,-24 7.8,-37.1 7.8,-64.9 0,-27.8 -1.5,-40.9 -7.8,-64.9 -4.8,-18 -9.2,-29.7 -18,-47.6 -13.2,-26.9 -26.9,-46 -48.9,-68.1 -22.1,-22 -41.2,-35.7 -68.1,-48.9 -24.6,-12.1 -47.4,-19.3 -74,-23.5 -14.7,-2.3 -47.5,-3.4 -61.5,-2zM283.8,48.5c70.7,9.9 130.9,54 161.4,118.3 13.7,28.8 19.8,56.4 19.8,89.2 0,19.1 -1.6,32.9 -5.9,50.6 -18.2,74.1 -78.4,134.3 -152.5,152.5 -17.7,4.3 -31.5,5.9 -50.6,5.9 -19.1,-0 -32.9,-1.6 -50.6,-5.9 -74.1,-18.2 -134.3,-78.4 -152.5,-152.5 -4.3,-17.7 -5.9,-31.5 -5.9,-50.6 0,-19.1 1.6,-32.9 5.9,-50.6 18.2,-74.2 78.4,-134.4 152.7,-152.5 6.7,-1.6 16.4,-3.6 21.5,-4.3 13.1,-1.9 43.2,-2 56.7,-0.1z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M361.6,159.7c-1.1,0.3 -3.6,1.6 -5.5,2.8 -2,1.3 -33.3,32.1 -69.6,68.4l-66,66.1 -31.5,-31.4c-17.3,-17.2 -32.9,-32.1 -34.5,-32.9 -13.9,-7 -30.3,0.9 -33.6,16.2 -0.9,4.1 -0.8,6.1 0.6,10.8 1.6,5.7 2.5,6.6 42.8,47.1 22.7,22.7 42.7,42.2 44.5,43.3 1.9,1.2 5.8,2.3 9.2,2.6 12.1,1.1 7.4,5.2 91.3,-78.6 41.7,-41.6 76.8,-77.2 78.2,-79.1 5.4,-7.8 5.2,-19 -0.5,-26.8 -5.1,-7.1 -16.3,-10.8 -25.4,-8.5z" android:strokeColor="#00000000"/>
+<vector android:alpha="1"
+    android:height="24dp"
+    android:viewportHeight="512"
+    android:viewportWidth="512"
+    android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M233,1c-49.4,4.8 -95,23 -135,53.8 -19.5,15 -44.8,43.2 -59.4,66.2 -6.3,9.9 -18.6,35.1 -23,47.1 -4.9,13.4 -10.2,34 -12.8,49.9 -3.1,19.5 -3.1,56.5 0,76 4.5,27.6 11.6,49.8 23.7,74.5 13.2,26.9 26.9,46 48.9,68.1 22.1,22 41.2,35.7 68.1,48.9 24.7,12.1 46.9,19.2 74.5,23.7 19.5,3.1 56.5,3.1 76,-0 27.6,-4.5 49.8,-11.6 74.5,-23.7 26.9,-13.2 46,-26.9 68.1,-48.9 22,-22.1 35.7,-41.2 48.9,-68.1 8.8,-17.9 13.2,-29.6 18,-47.6 6.3,-24 7.8,-37.1 7.8,-64.9 0,-27.8 -1.5,-40.9 -7.8,-64.9 -4.8,-18 -9.2,-29.7 -18,-47.6 -13.2,-26.9 -26.9,-46 -48.9,-68.1 -22.1,-22 -41.2,-35.7 -68.1,-48.9 -24.6,-12.1 -47.4,-19.3 -74,-23.5 -14.7,-2.3 -47.5,-3.4 -61.5,-2zM283.8,48.5c70.7,9.9 130.9,54 161.4,118.3 13.7,28.8 19.8,56.4 19.8,89.2 0,19.1 -1.6,32.9 -5.9,50.6 -18.2,74.1 -78.4,134.3 -152.5,152.5 -17.7,4.3 -31.5,5.9 -50.6,5.9 -19.1,-0 -32.9,-1.6 -50.6,-5.9 -74.1,-18.2 -134.3,-78.4 -152.5,-152.5 -4.3,-17.7 -5.9,-31.5 -5.9,-50.6 0,-19.1 1.6,-32.9 5.9,-50.6 18.2,-74.2 78.4,-134.4 152.7,-152.5 6.7,-1.6 16.4,-3.6 21.5,-4.3 13.1,-1.9 43.2,-2 56.7,-0.1z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M361.6,159.7c-1.1,0.3 -3.6,1.6 -5.5,2.8 -2,1.3 -33.3,32.1 -69.6,68.4l-66,66.1 -31.5,-31.4c-17.3,-17.2 -32.9,-32.1 -34.5,-32.9 -13.9,-7 -30.3,0.9 -33.6,16.2 -0.9,4.1 -0.8,6.1 0.6,10.8 1.6,5.7 2.5,6.6 42.8,47.1 22.7,22.7 42.7,42.2 44.5,43.3 1.9,1.2 5.8,2.3 9.2,2.6 12.1,1.1 7.4,5.2 91.3,-78.6 41.7,-41.6 76.8,-77.2 78.2,-79.1 5.4,-7.8 5.2,-19 -0.5,-26.8 -5.1,-7.1 -16.3,-10.8 -25.4,-8.5z"
+        android:strokeColor="#00000000" />
 </vector>
