--- a/app/src/main/res/drawable/ic_select_all.xml
+++ b/app/src/main/res/drawable/ic_select_all.xml
@@ -1,13 +1,26 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000"
-        android:pathData="M57.5,49.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.4,91 -0.3,198.4l0.3,195.2 2.1,2.7c1.1,1.5 3.3,3.7 4.8,4.8l2.7,2.1 197.9,-0 197.9,-0 2.7,-2.1c1.5,-1.1 3.7,-3.3 4.8,-4.8l2.1,-2.7 0,-197.9 0,-197.9 -2.1,-2.7c-1.1,-1.5 -3.3,-3.7 -4.8,-4.8l-2.7,-2.1 -196.7,-0.2c-162,-0.2 -197.2,-0 -199.7,1.1zM432,256l0,176 -176,-0 -176,-0 0,-176 0,-176 176,-0 176,-0 0,176z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#000000"
-        android:pathData="M121.5,113.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#000000"
-        android:pathData="M281.5,113.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#000000"
-        android:pathData="M121.5,273.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#000000"
-        android:pathData="M281.5,273.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z" android:strokeColor="#00000000"/>
+<vector android:height="24dp"
+    android:viewportHeight="512"
+    android:viewportWidth="512"
+    android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M57.5,49.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.4,91 -0.3,198.4l0.3,195.2 2.1,2.7c1.1,1.5 3.3,3.7 4.8,4.8l2.7,2.1 197.9,-0 197.9,-0 2.7,-2.1c1.5,-1.1 3.7,-3.3 4.8,-4.8l2.1,-2.7 0,-197.9 0,-197.9 -2.1,-2.7c-1.1,-1.5 -3.3,-3.7 -4.8,-4.8l-2.7,-2.1 -196.7,-0.2c-162,-0.2 -197.2,-0 -199.7,1.1zM432,256l0,176 -176,-0 -176,-0 0,-176 0,-176 176,-0 176,-0 0,176z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M121.5,113.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M281.5,113.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M121.5,273.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M281.5,273.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.5,26.2 -0.3,54.4 0.3,49.9 0.4,51.2 2.4,53.9 1.1,1.5 3.3,3.7 4.8,4.8 2.7,2.1 3.8,2.1 56.6,2.1 52.8,-0 53.9,-0 56.6,-2.1 1.5,-1.1 3.7,-3.3 4.8,-4.8 2.1,-2.7 2.1,-3.8 2.1,-56.6 0,-52.8 0,-53.9 -2.1,-56.6 -1.1,-1.5 -3.3,-3.7 -4.8,-4.8 -2.7,-2.1 -4,-2.1 -55.4,-2.3 -42.3,-0.2 -53.3,-0 -55.7,1.1z"
+        android:strokeColor="#00000000" />
 </vector>
