--- a/app/src/main/res/drawable/ic_update_time.xml
+++ b/app/src/main/res/drawable/ic_update_time.xml
@@ -1,8 +1,15 @@
-<vector android:alpha="1" android:height="24dp"
-    android:viewportHeight="512" android:viewportWidth="512"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff"
-        android:pathData="M233,65.5c-48.8,6.1 -92.7,29.8 -123.8,67 -48.7,58.1 -58.9,138.6 -26.1,206.5 46.1,95.6 160.7,135.9 255.8,90 54.2,-26.2 93.4,-76.2 105,-134 2.2,-11.2 4.1,-26.4 4.1,-34.3l0,-4.7 -21.4,-0 -21.3,-0 -0.6,10.7c-3,51.3 -35.2,99.3 -82.2,122.7 -13.9,7 -26.7,11.2 -42,13.8 -15.3,2.6 -40.8,2.1 -55,-1 -45.2,-10.1 -82.7,-39.2 -102.9,-79.7 -10.7,-21.5 -15.6,-42.2 -15.6,-66.5 0,-40.4 15.4,-77.4 44,-105.7 20.9,-20.7 45.4,-33.9 75,-40.6 8,-1.8 12.7,-2.1 30,-2.1 17.4,-0 22,0.3 30.2,2.1 26.4,6 49.6,17.8 69.9,35.5l5.4,4.7 -31.5,31.6 -31.5,31.5 74.8,-0 74.7,-0 0,-74.7 0,-74.8 -28.2,28.2 -28.3,28.1 -9,-8c-40.3,-35.7 -95.9,-52.9 -149.5,-46.3z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M235,224.3l0,53.2 44.6,26.5c24.6,14.6 44.9,26.6 45.3,26.7 0.7,0.3 16.1,-25 16.1,-26.4 0,-0.9 -10.4,-7.3 -59.7,-36.4l-14.3,-8.4 0,-44.3 0,-44.2 -16,-0 -16,-0 0,53.3z" android:strokeColor="#00000000"/>
+<vector android:alpha="1"
+    android:height="24dp"
+    android:viewportHeight="512"
+    android:viewportWidth="512"
+    android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M233,65.5c-48.8,6.1 -92.7,29.8 -123.8,67 -48.7,58.1 -58.9,138.6 -26.1,206.5 46.1,95.6 160.7,135.9 255.8,90 54.2,-26.2 93.4,-76.2 105,-134 2.2,-11.2 4.1,-26.4 4.1,-34.3l0,-4.7 -21.4,-0 -21.3,-0 -0.6,10.7c-3,51.3 -35.2,99.3 -82.2,122.7 -13.9,7 -26.7,11.2 -42,13.8 -15.3,2.6 -40.8,2.1 -55,-1 -45.2,-10.1 -82.7,-39.2 -102.9,-79.7 -10.7,-21.5 -15.6,-42.2 -15.6,-66.5 0,-40.4 15.4,-77.4 44,-105.7 20.9,-20.7 45.4,-33.9 75,-40.6 8,-1.8 12.7,-2.1 30,-2.1 17.4,-0 22,0.3 30.2,2.1 26.4,6 49.6,17.8 69.9,35.5l5.4,4.7 -31.5,31.6 -31.5,31.5 74.8,-0 74.7,-0 0,-74.7 0,-74.8 -28.2,28.2 -28.3,28.1 -9,-8c-40.3,-35.7 -95.9,-52.9 -149.5,-46.3z"
+        android:strokeColor="#00000000" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M235,224.3l0,53.2 44.6,26.5c24.6,14.6 44.9,26.6 45.3,26.7 0.7,0.3 16.1,-25 16.1,-26.4 0,-0.9 -10.4,-7.3 -59.7,-36.4l-14.3,-8.4 0,-44.3 0,-44.2 -16,-0 -16,-0 0,53.3z"
+        android:strokeColor="#00000000" />
 </vector>
