--- a/app/src/main/res/drawable/round_corners.xml
+++ b/app/src/main/res/drawable/round_corners.xml
@@ -3,6 +3,5 @@
     android:shape="rectangle">
     <corners
         android:topLeftRadius="32dp"
-        android:topRightRadius="32dp"
-        />
+        android:topRightRadius="32dp" />
 </shape>
