add folder added on videoFragment.

--- a/app/src/main/res/layout/folder_view.xml
+++ b/app/src/main/res/layout/folder_view.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@drawable/ic_folder" />
 
     <TextView
         android:id="@+id/folder_name_text_view"
