--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -30,7 +30,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarVideosFragment" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbarVideosFragment"
+            tools:listitem="@layout/folder_view" />
 
         <ProgressBar
             android:id="@+id/progressBar_videos_fragment"
