--- a/app/src/main/res/anim/layout_animation.xml
+++ b/app/src/main/res/anim/layout_animation.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
-    android:delay="5%"
+    android:animation="@anim/fall_down"
     android:animationOrder="normal"
-    android:animation="@anim/fall_down">
+    android:delay="5%">
 
 
 </layoutAnimation>
