--- a/app/src/main/res/drawable/dark_stroke.xml
+++ b/app/src/main/res/drawable/dark_stroke.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="?attr/colorTertiary"
-        android:width="0.5dp" />
+        android:width="0.5dp"
+        android:color="?attr/colorTertiary" />
     <corners android:radius="5dp" />
 </shape>
