--- a/app/src/main/res/drawable/ic_add_photos.xml
+++ b/app/src/main/res/drawable/ic_add_photos.xml
@@ -1,9 +1,9 @@
-<vector android:alpha="1"
-    android:height="48dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="48dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="48dp"
+    android:alpha="1"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#ffffff"
         android:pathData="M68.1,33.6c-16.9,4.5 -30.1,18 -34.6,35.1 -2.3,8.6 -2.3,302 0,310.6 4.6,17.8 19.3,32 36.7,35.6 3.7,0.8 36.4,1.1 106.5,0.9 100.4,-0.3 101.2,-0.3 103.9,-2.4 5.3,-3.9 6.9,-7.1 6.9,-13.4 0,-6.3 -1.6,-9.5 -6.9,-13.4 -2.7,-2.1 -3.7,-2.1 -104.6,-2.6 -100.9,-0.5 -101.9,-0.5 -104.6,-2.6 -1.5,-1.1 -3.7,-3.3 -4.8,-4.8 -2.1,-2.7 -2.1,-2.8 -2.1,-152.6 0,-149.8 0,-149.9 2.1,-152.6 1.1,-1.5 3.3,-3.7 4.8,-4.8 2.7,-2.1 2.8,-2.1 152.6,-2.1 149.8,-0 149.9,-0 152.6,2.1 1.5,1.1 3.7,3.3 4.8,4.8 2.1,2.7 2.1,3.7 2.6,104.6 0.5,100.9 0.5,101.9 2.6,104.6 3.9,5.3 7.1,6.9 13.4,6.9 6.3,-0 9.5,-1.6 13.4,-6.9 2.1,-2.7 2.1,-3.5 2.4,-103.9 0.2,-70.1 -0.1,-102.8 -0.9,-106.5 -3.6,-17.4 -17.8,-32.1 -35.6,-36.7 -8.5,-2.2 -303,-2.1 -311.2,0.1z"
