--- a/app/src/main/res/drawable/ic_add_video.xml
+++ b/app/src/main/res/drawable/ic_add_video.xml
@@ -1,9 +1,9 @@
-<vector android:alpha="0.7"
-    android:height="24dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:alpha="0.7"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#000000"
         android:pathData="M60.5,92.6c-1.1,0.2 -4.5,0.9 -7.5,1.5 -3,0.6 -9.7,3.1 -14.9,5.6 -7.8,3.7 -10.9,5.9 -17.6,12.7 -6.7,6.6 -9.1,9.9 -12.9,17.6 -7.9,16.1 -7.6,10.5 -7.6,126 0,115.5 -0.3,109.9 7.6,126 3.8,7.7 6.2,11 12.9,17.6 6.8,6.8 9.7,8.9 17.6,12.7 5.2,2.5 11.9,5.1 14.9,5.9 4.5,1 31.4,1.3 144.5,1.3l139,-0 7.7,-2.6c11.5,-4 20.4,-9.4 28.3,-17.3 13.9,-14.1 19.3,-27.5 20.3,-50.7l0.7,-14.6 40.4,23.3c30.7,17.8 41.6,23.6 45.8,24.4 13,2.7 27.1,-5.7 30.8,-18.4 2.2,-7.4 2.2,-207.8 0,-215.2 -4,-13.4 -19.4,-22 -32.7,-18 -2.9,0.9 -23,11.8 -44.8,24.4l-39.5,22.8 -0.6,-14.5c-0.6,-11.7 -1.2,-16.2 -3.3,-22.6 -7,-21.7 -23,-37.7 -45.4,-45.4l-7.7,-2.6 -137,-0.1c-75.3,-0.1 -137.9,-0 -139,0.2zM331.8,125c11.5,2.7 20.4,9.9 25.5,20.8l3.2,6.7 0,103.5 0,103.5 -3.2,6.7c-1.7,3.6 -5,8.5 -7.3,10.8 -2.3,2.3 -7.2,5.6 -10.8,7.3l-6.7,3.2 -133.4,0.3c-117.9,0.2 -134.1,0.1 -139.5,-1.3 -11,-2.8 -19.9,-10.4 -24.8,-21.1l-2.3,-4.9 0,-104.5 0,-104.5 2.3,-4.9c3.1,-6.7 8.2,-12.7 13.9,-16.4 9.9,-6.3 3,-6.1 147.3,-6.1 83.4,-0 133.1,0.3 135.8,0.9zM479.8,301.5l-0.3,45.5 -43,-24.8 -43,-24.8 0,-41.4 0,-41.4 43,-24.8 43,-24.9 0.3,45.6c0.1,25 0.1,66 0,91z"
