--- a/app/src/main/res/drawable/ic_extend_date.xml
+++ b/app/src/main/res/drawable/ic_extend_date.xml
@@ -1,8 +1,8 @@
-<vector android:height="24dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#000000"
         android:pathData="M111.4,4.4c-1.7,0.8 -4.4,3.1 -6,5.2 -2.7,3.5 -2.9,4.5 -3.2,13.9l-0.4,10.3 -14.6,0.5c-16.7,0.5 -23.3,2.1 -36.7,9 -6.2,3.2 -10.2,6.3 -17.5,13.7 -8.1,8 -10.3,11 -14.3,19 -8.8,17.8 -8.2,6.9 -8.2,142 0,94.5 0.3,120.5 1.3,124.5 8.3,32.1 32.4,54.5 64,59.4 9.9,1.5 258.5,1.5 268.4,-0 16.6,-2.6 30.9,-9.8 42.9,-21.8 11.9,-11.9 19.4,-26.6 21.9,-42.8 0.7,-4.6 1,-45.1 0.8,-123.3 -0.4,-131.4 0.3,-120.2 -8.5,-138 -4,-8 -6.2,-11 -14.3,-19.1 -8.5,-8.6 -10.7,-10.2 -20,-14.7 -12.8,-6.2 -21.9,-8.2 -37.4,-8.2l-11.4,-0 -0.4,-10.3c-0.3,-9.6 -0.5,-10.6 -3.2,-14.1 -5,-6.6 -11.7,-8.2 -19.2,-4.6 -6.6,3.2 -7.8,5.8 -8.4,18l-0.5,10.5 -76.5,-0 -76.5,-0 -0.5,-10.5c-0.6,-12.2 -1.8,-14.8 -8.4,-18 -4.9,-2.3 -8.8,-2.5 -13.2,-0.6zM102.2,82.9c0.3,19.9 0.7,21 7.8,25.8 6.1,4.2 15.7,2.3 20.3,-4.1 2,-2.9 2.2,-4.5 2.7,-21.1l0.5,-18 76.5,-0 76.5,-0 0.5,18c0.5,16.6 0.7,18.2 2.7,21.1 4.6,6.4 14.2,8.3 20.3,4.1 7.1,-4.8 7.5,-5.9 7.8,-25.8l0.3,-17.9 9.8,-0c15.9,-0 26.4,3.7 36.1,12.6 10.2,9.5 15,21.9 15,39.1l0,9.3 -169,-0 -169,-0 0,-9.3c0,-17.2 4.8,-29.6 15,-39.1 9.7,-9 19.6,-12.4 35.7,-12.5l10.2,-0.1 0.3,17.9zM378.9,243.7c0,78.7 -0.2,87.4 -1.7,93.4 -4.4,16.9 -17.9,29.8 -34.9,33.4 -10.1,2.2 -254.5,2.2 -264.6,-0 -17,-3.6 -30.5,-16.5 -34.9,-33.4 -1.5,-6 -1.7,-14.7 -1.7,-93.4l-0.1,-86.7 169,-0 169,-0 -0.1,86.7z"
