--- a/app/src/main/res/drawable/ic_folder.xml
+++ b/app/src/main/res/drawable/ic_folder.xml
@@ -1,5 +1,10 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000"
-        android:pathData="M54.5,40c-20,2.8 -38.5,16 -47.4,34.1 -7.5,15.2 -7.1,4.1 -7.1,181.9 0,177.9 -0.4,166.7 7.1,182 7.9,15.8 24.3,28.8 41.9,33.2 4.5,1.1 41.6,1.3 207,1.3 165.4,-0 202.5,-0.2 207,-1.3 17.6,-4.4 34,-17.4 41.9,-33.2 7.4,-15.1 7.1,-8.4 7.1,-142.5 0,-134.1 0.3,-127.3 -7.1,-142.5 -7.5,-15.3 -22.1,-27.3 -39.9,-32.7 -4.9,-1.5 -15.2,-1.8 -95.5,-2.3 -89.8,-0.5 -90,-0.5 -94,-2.7 -2.4,-1.2 -14.3,-13 -29.3,-29 -28.3,-29.9 -33.8,-35 -43.3,-39.8 -13.7,-7 -11.6,-6.8 -80.4,-7.1 -34.1,-0.1 -64.7,0.2 -68,0.6zM184.1,80.1c4,1.8 9.4,6.9 31.6,30.3 29,30.6 33.8,35 42.8,39.4 14.2,7.1 7.4,6.6 107.5,7.2 83.1,0.5 90.8,0.6 93.6,2.2 4.6,2.5 9.4,7.7 11.5,12.3 1.8,3.8 1.9,9.9 1.9,124 0,114.1 -0.1,120.2 -1.9,124 -2.2,4.8 -7,9.7 -12,12.2 -3.4,1.7 -13.1,1.8 -203.1,1.8 -190,-0 -199.7,-0.1 -203.1,-1.8 -5,-2.5 -9.8,-7.4 -12,-12.2 -1.8,-3.8 -1.9,-11.2 -1.9,-163.5 0,-155.3 0.1,-159.6 2,-163.5 1,-2.2 2.5,-4.7 3.2,-5.5 2.2,-2.6 8.1,-6.7 11.3,-7.8 2,-0.7 24,-1.1 63.3,-1.1 59.3,-0.1 60.4,-0.1 65.3,2z" android:strokeColor="#00000000"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M54.5,40c-20,2.8 -38.5,16 -47.4,34.1 -7.5,15.2 -7.1,4.1 -7.1,181.9 0,177.9 -0.4,166.7 7.1,182 7.9,15.8 24.3,28.8 41.9,33.2 4.5,1.1 41.6,1.3 207,1.3 165.4,-0 202.5,-0.2 207,-1.3 17.6,-4.4 34,-17.4 41.9,-33.2 7.4,-15.1 7.1,-8.4 7.1,-142.5 0,-134.1 0.3,-127.3 -7.1,-142.5 -7.5,-15.3 -22.1,-27.3 -39.9,-32.7 -4.9,-1.5 -15.2,-1.8 -95.5,-2.3 -89.8,-0.5 -90,-0.5 -94,-2.7 -2.4,-1.2 -14.3,-13 -29.3,-29 -28.3,-29.9 -33.8,-35 -43.3,-39.8 -13.7,-7 -11.6,-6.8 -80.4,-7.1 -34.1,-0.1 -64.7,0.2 -68,0.6zM184.1,80.1c4,1.8 9.4,6.9 31.6,30.3 29,30.6 33.8,35 42.8,39.4 14.2,7.1 7.4,6.6 107.5,7.2 83.1,0.5 90.8,0.6 93.6,2.2 4.6,2.5 9.4,7.7 11.5,12.3 1.8,3.8 1.9,9.9 1.9,124 0,114.1 -0.1,120.2 -1.9,124 -2.2,4.8 -7,9.7 -12,12.2 -3.4,1.7 -13.1,1.8 -203.1,1.8 -190,-0 -199.7,-0.1 -203.1,-1.8 -5,-2.5 -9.8,-7.4 -12,-12.2 -1.8,-3.8 -1.9,-11.2 -1.9,-163.5 0,-155.3 0.1,-159.6 2,-163.5 1,-2.2 2.5,-4.7 3.2,-5.5 2.2,-2.6 8.1,-6.7 11.3,-7.8 2,-0.7 24,-1.1 63.3,-1.1 59.3,-0.1 60.4,-0.1 65.3,2z"
+        android:strokeColor="#00000000" />
 </vector>
