--- a/app/src/main/res/drawable/ic_info.xml
+++ b/app/src/main/res/drawable/ic_info.xml
@@ -1,8 +1,8 @@
-<vector android:height="24dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#000000"
         android:pathData="M219,44.5c-32.2,4.5 -60.1,15.1 -86.2,32.6 -71.5,48.1 -104.7,134.7 -83.7,218.4 16.4,65.9 67.1,120.3 132.1,141.9 94.4,31.4 197,-9.8 243.3,-97.6 41.4,-78.7 26.9,-174.4 -36,-237.3 -32.8,-32.9 -75.5,-53.5 -120.7,-58.4 -12.9,-1.4 -37,-1.2 -48.8,0.4zM263.1,65c71.2,7.2 131.4,55.3 154,123 17.5,52.6 10.3,109.6 -19.8,155.9 -40.6,62.5 -115.9,94 -188.6,79 -38,-7.9 -75.2,-29.6 -99.8,-58.2 -52.1,-60.7 -59.4,-145.8 -18.3,-213.5 35.9,-59.2 103.9,-93.1 172.5,-86.2z"
