--- a/app/src/main/res/drawable/ic_pencil.xml
+++ b/app/src/main/res/drawable/ic_pencil.xml
@@ -1,8 +1,8 @@
-<vector android:height="24dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#000000"
         android:pathData="M409,2.9c-12.4,4 -15.6,6.4 -39,29.7l-22.5,22.4 54.7,54.7 54.8,54.8 21.1,-21c22.5,-22.4 27.7,-29 31,-39.4 4.5,-14.6 3.5,-28 -3.3,-42.1 -3.8,-8 -5.2,-9.7 -25.7,-30.1 -23,-23 -27,-25.9 -40.1,-29.4 -7.7,-2.1 -24.1,-1.9 -31,0.4z"
