--- a/app/src/main/res/drawable/ic_select_all.xml
+++ b/app/src/main/res/drawable/ic_select_all.xml
@@ -1,8 +1,8 @@
-<vector android:height="24dp"
-    android:viewportHeight="512"
-    android:viewportWidth="512"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
     <path
         android:fillColor="#000000"
         android:pathData="M57.5,49.4c-4.1,1.8 -8.3,6.9 -9,10.9 -0.3,1.8 -0.4,91 -0.3,198.4l0.3,195.2 2.1,2.7c1.1,1.5 3.3,3.7 4.8,4.8l2.7,2.1 197.9,-0 197.9,-0 2.7,-2.1c1.5,-1.1 3.7,-3.3 4.8,-4.8l2.1,-2.7 0,-197.9 0,-197.9 -2.1,-2.7c-1.1,-1.5 -3.3,-3.7 -4.8,-4.8l-2.7,-2.1 -196.7,-0.2c-162,-0.2 -197.2,-0 -199.7,1.1zM432,256l0,176 -176,-0 -176,-0 0,-176 0,-176 176,-0 176,-0 0,176z"
