--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,8 +12,8 @@
         android:title="Photos" />
 
     <item
-        android:title="Others"
         android:id="@+id/navigation_others"
-        android:icon="@drawable/ic_others" />
+        android:icon="@drawable/ic_others"
+        android:title="Others" />
 
 </menu>
