selecting files method changed

--- a/app/src/main/res/layout/activity_lock_files.xml
+++ b/app/src/main/res/layout/activity_lock_files.xml
@@ -13,7 +13,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="4dp"
-        android:text="Set Time"
+        android:text="@string/set_time"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toStartOf="@+id/set_date_lock_activity"
         app:layout_constraintHorizontal_bias="0.5"
@@ -54,7 +54,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/date_time_button_background"
-        android:text="Set Date"
+        android:text="@string/set_date"
         app:layout_constraintBottom_toBottomOf="@+id/set_time_lock_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
