--- a/app/src/main/res/layout/file_for_lock_view.xml
+++ b/app/src/main/res/layout/file_for_lock_view.xml
@@ -24,7 +24,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/date_time_button_background"
-        android:text="Set Time"
+        android:fontFamily="@font/roboto_condensed_regular"
+        android:text="@string/set_time"
         app:layout_constraintEnd_toStartOf="@+id/set_date_lock_file"
         app:layout_constraintStart_toEndOf="@+id/lock_file_imageview"
         app:layout_constraintTop_toTopOf="@+id/lock_file_imageview" />
@@ -36,7 +37,8 @@
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/date_time_button_background"
-        android:text="Set Date"
+        android:fontFamily="@font/roboto_condensed_regular"
+        android:text="@string/set_date"
         app:layout_constraintBottom_toBottomOf="@+id/set_time_lock_file"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -47,9 +49,12 @@
         android:id="@+id/lock_file_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/roboto_condensed_regular"
         android:gravity="center_vertical"
         android:padding="5dp"
-        android:text="File Name"
+        android:textSize="12sp"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@+id/lock_file_imageview"
         app:layout_constraintEnd_toEndOf="@+id/set_date_lock_file"
         app:layout_constraintStart_toStartOf="@+id/set_time_lock_file"
