--- a/app/src/main/res/layout/image_list_view.xml
+++ b/app/src/main/res/layout/image_list_view.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="2dp">
 
     <ImageView
@@ -12,13 +13,16 @@
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />
 
-    <CheckBox
-        android:id="@+id/checkbox_images_list"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+    <ImageView
+        android:id="@+id/check_box_images_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignStart="@id/imageView_images_list"
         android:layout_alignTop="@id/imageView_images_list"
-        android:layout_alignParentEnd="false"
-        android:layout_centerVertical="true"
-        android:clickable="false" />
+        android:layout_alignEnd="@id/imageView_images_list"
+        android:layout_alignBottom="@id/imageView_images_list"
+        android:padding="45dp"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_check" />
+
 </RelativeLayout>
