--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/purple_light</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/transparent</item>
+        <item name="android:statusBarColor" >@color/transparent</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/light_blue</item>
@@ -18,8 +18,6 @@
         <item name="colorTertiary">@color/black</item>
         <!-- This allow Action Mode show on top of toolbar -->
         <item name="windowActionModeOverlay">true</item>
-
-        <item name="titleTextColor">@color/white</item>
     </style>
 
     <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
