--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.videos.VideoPlayerActivity">
+    tools:context=".ui.ViewMedia.VideoPlayerActivity">
 
     <VideoView
         android:id="@+id/video_view"
