--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
+    <string-array name="theme_entries">
         <item>System Default</item>
         <item>Dark</item>
         <item>Light</item>
